# Voicevenue3

./: .env.example  .gitignore  Makefile  README.md  SMARTICUS81_VERCEL_SETUP.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_SETUP.md  VOICE_LOOPBACK_TEST.md  VOICE_PIPELINE.md  drinks.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run-app.bat  setup-vercel.md  simple-start.bat  sitecustomize.py  start-dev.bat  start-voice-agent.bat  start-voice-test.bat  vercel.json
apps/backend/: pyproject.toml  requirements.txt
apps/backend/app/: main.py
apps/frontend/: VOICE_SETUP.md  middleware.ts  next.config.ts  package.json  setup-database.bat  start-voice-servers.bat  tailwind.config.ts  tsconfig.json
apps/voice/: .env.example  dev.py  requirements.txt
config/: agent_config.yml
config/personas/: bev.md
convex/: agents.ts  deployments.ts  schema.ts  vercelDeploy.ts
data/: intents.yaml
infra/: README.md  docker-compose.yml
infra/dockerfiles/: backend.Dockerfile  voice.Dockerfile
infra/nginx/: default.conf
public/: embed.js  manifest.json
src/: middleware.ts
src/app/: globals.css  layout.tsx  manifest.ts  page.tsx
src/components/: bevpro-studio-logo.tsx  convex-client-provider.tsx  dashboard-layout.tsx  minimalist-voice-interface.tsx  pwa-install-prompt.tsx  ui-generation-step.tsx
src/hooks/: useEnhancedVoice.ts  useRealtimeVoice.ts  useVoiceAgent.ts
src/lib/: agent-intents.ts  default-instructions.ts  openai-realtime-client.ts  openai-realtime.ts  v0-client.ts  voice-providers.ts  voice.ts  wake-word-detector.ts
(+237 files in other folders)
