[project]
name = "bpstudio-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.112.1",
  "uvicorn[standard]==0.30.1",
  "pydantic==2.8.2",
  "pyyaml==6.0.2",
  "sqlalchemy==2.0.31",
  "sqlmodel==0.0.21",
  "alembic==1.13.2",
  "psycopg[binary]==3.2.1",
  "httpx==0.27.0",
  "requests==2.32.3",
]

[tool.pytest.ini_options]
testpaths = ["apps/backend/tests"]

